--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,24 +7,161 @@
     tools:context=".auth.Forgot_Password">
 
     <RelativeLayout
+        android:id="@+id/forgot_password_send_OTP_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/number"
-        android:visibility="visible"
         android:background="@drawable/forgot_password"
-        >
+        android:visibility="gone">
 
+        <TextView
+            android:id="@+id/forgot_password_send_OTP_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_170sdp"
+            android:fontFamily="@font/coda"
+            android:text="Forgot Password?"
+            android:textColor="#B18CFF"
+            android:textSize="@dimen/_20sdp" />
 
+        <TextView
+            android:id="@+id/enter_registered_phone_number"
+            android:layout_below="@+id/forgot_password_send_OTP_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:text="Enter registered Phone Number"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp" />
+
+        <EditText
+            android:id="@+id/edittext_number_for_otp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/enter_registered_phone_number"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_shape"
+            android:backgroundTint="#EB591E87"
+            android:hint="Number"
+            android:inputType="number"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:textColor="#ffffff"
+            android:paddingEnd="@dimen/_5sdp"
+            android:textColorHint="#FFFFFF"
+            android:textSize="@dimen/_13sdp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/send_otp_btn"
+            android:layout_width="@dimen/_250sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_below="@+id/edittext_number_for_otp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/custom_edit_shape"
+            android:backgroundTint="#B18CFF"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:gravity="center|center_vertical"
+            android:paddingEnd="@dimen/_1sdp"
+            android:text="Send OTP"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold"/>
+
+        <androidx.constraintlayout.utils.widget.ImageFilterButton
+            android:id="@+id/logo_img_view_send_otp"
+            android:layout_below="@+id/send_otp_btn"
+            android:layout_width="@dimen/_119sdp"
+            android:layout_height="@dimen/_136sdp"
+            android:src="@drawable/logo"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_centerHorizontal="true"
+            />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/otp"
-        android:visibility="gone"
-        android:background="@drawable/baseline_arrow_back_24"
+        android:id="@+id/forgot_password_verify_otp"
+        android:visibility="visible"
+        android:background="@drawable/forgot_password"
         >
+
+        <TextView
+            android:id="@+id/forgot_password_verify_OTP_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_170sdp"
+            android:fontFamily="@font/coda"
+            android:text="Forgot Password?"
+            android:textColor="#B18CFF"
+            android:textSize="@dimen/_20sdp" />
+
+        <TextView
+            android:id="@+id/enter_code_recive_on_number"
+            android:layout_below="@+id/forgot_password_verify_OTP_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:text="Enter registered Phone Number"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp" />
+
+        <EditText
+            android:id="@+id/edittext_number_for_verify_otp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_38sdp"
+            android:layout_below="@+id/enter_code_recive_on_number"
+            android:layout_marginStart="@dimen/_26sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_26sdp"
+            android:background="@drawable/custom_edit_shape"
+            android:backgroundTint="#EB591E87"
+            android:hint="Enter Received OTP"
+            android:inputType="number"
+            android:paddingStart="@dimen/_15sdp"
+            android:singleLine="true"
+            android:textColor="#ffffff"
+            android:paddingEnd="@dimen/_5sdp"
+            android:textColorHint="#FFFFFF"
+            android:textSize="@dimen/_13sdp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/send_verify_otp_btn"
+            android:layout_width="@dimen/_250sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_below="@+id/edittext_number_for_verify_otp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/custom_edit_shape"
+            android:backgroundTint="#B18CFF"
+            android:fontFamily="@font/ibarra_real_nova"
+            android:gravity="center|center_vertical"
+            android:paddingEnd="@dimen/_1sdp"
+            android:text="Verify OTP"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold"/>
+
+        <androidx.constraintlayout.utils.widget.ImageFilterButton
+            android:id="@+id/logo_img_view_send_verify_otp"
+            android:layout_below="@+id/send_verify_otp_btn"
+            android:layout_width="@dimen/_119sdp"
+            android:layout_height="@dimen/_136sdp"
+            android:src="@drawable/logo"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_centerHorizontal="true"
+            />
+
+
 
     </RelativeLayout>
 
