--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -77,6 +77,8 @@
             android:layout_below="@+id/send_otp_btn"
             android:layout_width="@dimen/_119sdp"
             android:layout_height="@dimen/_136sdp"
+            android:scaleType="fitXY"
+            android:background="@android:color/transparent"
             android:src="@drawable/logo"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_centerHorizontal="true"
@@ -156,12 +158,12 @@
             android:layout_below="@+id/send_verify_otp_btn"
             android:layout_width="@dimen/_119sdp"
             android:layout_height="@dimen/_136sdp"
+            android:scaleType="fitXY"
+            android:background="@android:color/transparent"
             android:src="@drawable/logo"
             android:layout_marginTop="@dimen/_15sdp"
             android:layout_centerHorizontal="true"
             />
-
-
 
     </RelativeLayout>
 
