--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,9 +26,9 @@
 
         <TextView
             android:id="@+id/enter_registered_phone_number"
-            android:layout_below="@+id/forgot_password_send_OTP_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/forgot_password_send_OTP_text_view"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/_4sdp"
             android:fontFamily="@font/ibarra_real_nova"
@@ -49,9 +49,9 @@
             android:hint="Number"
             android:inputType="number"
             android:paddingStart="@dimen/_15sdp"
+            android:paddingEnd="@dimen/_5sdp"
             android:singleLine="true"
             android:textColor="#ffffff"
-            android:paddingEnd="@dimen/_5sdp"
             android:textColorHint="#FFFFFF"
             android:textSize="@dimen/_13sdp" />
 
@@ -70,19 +70,18 @@
             android:text="Send OTP"
             android:textAllCaps="false"
             android:textSize="@dimen/_20sdp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <androidx.constraintlayout.utils.widget.ImageFilterButton
             android:id="@+id/logo_img_view_send_otp"
-            android:layout_below="@+id/send_otp_btn"
             android:layout_width="@dimen/_119sdp"
             android:layout_height="@dimen/_136sdp"
-            android:scaleType="fitXY"
-            android:background="@android:color/transparent"
-            android:src="@drawable/logo"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_below="@+id/send_otp_btn"
             android:layout_centerHorizontal="true"
-            />
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo" />
 
     </RelativeLayout>
 
