--- a/app/src/main/res/layout/activity_registration_form.xml
+++ b/app/src/main/res/layout/activity_registration_form.xml
@@ -158,10 +158,7 @@
         android:text="Create Account"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textSize="20dp"
-        android:paddingStart="@dimen/_65sdp"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_50sdp"/>
+        android:textSize="20dp"/>
 
     <EditText
         android:id="@+id/Edittext_referral_code"
